--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
         "drupal/devel": "^5.3",
+        "drupal/restui": "^1.22",
         "drush/drush": "^12.5"
     },
     "conflict": {
