--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -4,11 +4,13 @@ status: true
 dependencies:
   config:
     - filter.format.basic_html
+    - rest.resource.config_export_rest_resource
   module:
     - comment
     - contact
     - file
     - filter
+    - rest
     - search
     - shortcut
     - system
@@ -23,8 +25,10 @@ permissions:
   - 'access content'
   - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'administer rest resources'
   - 'delete own files'
   - 'post comments'
+  - 'restful get config_export_rest_resource'
   - 'search content'
   - 'skip comment approval'
   - 'use text format basic_html'
