--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -5,6 +5,7 @@ module:
   admin_toolbar_tools: 0
   announcements_feed: 0
   automated_cron: 0
+  basic_auth: 0
   big_pipe: 0
   block: 0
   block_content: 0
@@ -12,7 +13,9 @@ module:
   ckeditor5: 0
   comment: 0
   config: 0
+  config_export_rest: 0
   contact: 0
+  contact_api: 0
   contextual: 0
   datetime: 0
   dblog: 0
@@ -27,6 +30,7 @@ module:
   help: 0
   history: 0
   image: 0
+  jsonapi: 0
   link: 0
   menu_link_content: 0
   menu_ui: 0
@@ -37,6 +41,7 @@ module:
   path: 0
   path_alias: 0
   rest: 0
+  restui: 0
   search: 0
   serialization: 0
   shortcut: 0
