--- a/config/sync/field.field.media.image.field_media_image.yml
+++ b/config/sync/field.field.media.image.field_media_image.yml
@@ -1,13 +1,16 @@
-uuid: 8bc3c167-b538-4a9a-8436-a80b2c258ad0
+uuid: 86af449b-00d1-417b-904c-5f478eb25e33
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_image
-    - node.type.article
+    - field.storage.media.field_media_image
+    - media.type.image
   module:
     - content_translation
     - image
+  enforced:
+    module:
+      - media
 third_party_settings:
   content_translation:
     translation_sync:
@@ -15,14 +18,14 @@ third_party_settings:
       title: title
       file: '0'
 _core:
-  default_config_hash: j0riO_-77ZFWNLtj0iJ31HnohiNjdn8HUL86RueCF-M
-id: node.article.field_image
-field_name: field_image
-entity_type: node
-bundle: article
+  default_config_hash: P7CkVOgjDXiN26Fm2hniNei-XPK3iuZTlcBGqreTbJ0
+id: media.image.field_media_image
+field_name: field_media_image
+entity_type: media
+bundle: image
 label: Image
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
@@ -30,8 +33,8 @@ settings:
   handler: 'default:file'
   handler_settings: {  }
   file_directory: '[date:custom:Y]-[date:custom:m]'
-  file_extensions: 'png gif jpg jpeg webp'
-  max_filesize: ''
+  file_extensions: 'png gif jpeg jpg'
+  max_filesize: '800 KB'
   max_resolution: ''
   min_resolution: ''
   alt_field: true
@@ -39,7 +42,7 @@ settings:
   title_field: false
   title_field_required: false
   default_image:
-    uuid: null
+    uuid: ''
     alt: ''
     title: ''
     width: null
