--- a/config/sync/user.role.content_editor.yml
+++ b/config/sync/user.role.content_editor.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - media.type.image
     - node.type.article
     - node.type.page
     - taxonomy.vocabulary.tags
@@ -10,6 +11,7 @@ dependencies:
     - comment
     - contextual
     - file
+    - media
     - node
     - path
     - system
@@ -35,6 +37,7 @@ permissions:
   - 'delete article revisions'
   - 'delete own article content'
   - 'delete own files'
+  - 'delete own image media'
   - 'delete own page content'
   - 'delete page revisions'
   - 'edit own article content'
