--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/devel": "^5.3",
         "drupal/jsonapi_extras": "^3.25",
         "drupal/restui": "^1.22",
+        "drupal/simple_oauth": "^5.2",
         "drush/drush": "^12.5"
     },
     "conflict": {
