--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -4,6 +4,7 @@ module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
   announcements_feed: 0
+  article_deletion_logger: 0
   article_tag_update: 0
   automated_cron: 0
   basic_auth: 0
@@ -16,6 +17,7 @@ module:
   config: 0
   config_export_rest: 0
   config_translation: 0
+  consumers: 0
   contact: 0
   contact_api: 0
   contextual: 0
@@ -54,6 +56,7 @@ module:
   search: 0
   serialization: 0
   shortcut: 0
+  simple_oauth: 0
   system: 0
   taxonomy: 0
   text: 0
